added get stash member handler
